# = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = =

# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
# CMAKE
# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

# CMake Version
cmake_minimum_required( VERSION ${PROJECT_CMAKE_VERSION} )

# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
# PROJECT
# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

project( "zmutex_tests" VERSION ${APP_VERSION} LANGUAGES C CXX )

# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
# HEADERS
# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

set( ZMUTEX_TESTS_HEADERS
    "" )

# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
# SOURCES
# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

set( ZMUTEX_TESTS_SOURCES
    "${CMAKE_CURRENT_SOURCE_DIR}/MutexTests.cpp" )

# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
# BUILD
# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

add_executable(zmutex_tests ${ZMUTEX_TESTS_HEADERS} ${ZMUTEX_TESTS_SOURCES})

target_link_libraries( zmutex_tests PUBLIC 
    gtest_main
    zmutex
)

add_test( 
    NAME zmutex_tests
    COMMAND zmutex_tests
)

# = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = =